--- a/pom.xml
+++ b/pom.xml
@@ -49,19 +49,19 @@
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.0.0-M3</version>
         <executions>
-          <execution>
-            <id>enforce-maven</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <version>[3.5.4,)</version>
-                </requireMavenVersion>
+<!--  <execution>
+    <id>enforce-maven</id>
+    <goals>
+      <goal>enforce</goal>
+    </goals>
+    <configuration>
+      <rules>
+	<requireMavenVersion>
+	  <version>[3.5.4,)</version>
+	</requireMavenVersion>
               </rules>
             </configuration>
-          </execution>
+          </execution> --> 
         </executions>
       </plugin>
     </plugins>
